Added fontawesome icon. Added functionality for button click to toggle open class.

--- a/package.json
+++ b/package.json
@@ -19,5 +19,6 @@
   "homepage": "https://github.com/construktivist/mobile-navigation-menu#readme",
   "devDependencies": {
     "node-sass": "^4.13.0"
-  }
+  },
+  "dependencies": {}
 }
